# shacmp_rs

./: .gitignore  Cargo.toml  LICENSE.md  README.md
Docs/: shacmp_rs.drawio
src/: adapter.rs  comparator.rs  lib.rs  main.rs  parser.rs  sha.rs
